[gd_scene load_steps=5 format=3 uid="uid://bqi3n4fssgs2l"]

[ext_resource type="Script" path="res://scripts/enemy_handler.gd" id="1_3gvam"]
[ext_resource type="PackedScene" uid="uid://ctvsu42r2m2b5" path="res://Scenes/Enemies/kunai_.tscn" id="2_dk0vh"]
[ext_resource type="PackedScene" uid="uid://4i2iyednab76" path="res://Scenes/Enemies/shuriken.tscn" id="2_ylr5j"]

[sub_resource type="Curve2D" id="Curve2D_mvari"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, -8, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, -8)
}
point_count = 5

[node name="EnemyHandler" type="Node"]
script = ExtResource("1_3gvam")
Enemys = Array[PackedScene]([ExtResource("2_dk0vh")])
mob_scene = ExtResource("2_ylr5j")

[node name="MobTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 1.5

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_mvari")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(0, -8)
rotation = 0.0166651

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
